Changes for iOS and LLVM